--- a/style.css
+++ b/style.css
@@ -8,17 +8,23 @@
 
 body{
     font-family: "Chakra petch", sans-serif;
-}
-
-h1, h2, h5 {
-    color: var(--cor-secundaria);
-    font-weight: 700;
-}
-
-footer a {
     color: var(--cor-principal);
 }
 
-footer a:hover {
+h1, h2, h5 {
+    color: var(--cor-principal);
+    font-weight: 700;
+}
+
+.lead, .btn-link{
+    color: var(--cor-destaque);
+    font-weight: 700;
+}
+
+a  .btn-link:hover{
+    color: var(--cor-principal);
+}
+
+a:hover {
     color: var(--cor-destaque)
 }
